--- a/MergePEISprofit.ipynb
+++ b/MergePEISprofit.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "# 0. 파일불러들이기 붙여질 파일(PEIS) + 붙일 파일(price)\n",
-    "*# 아시아나항공이랑 한섬은 stock 데이터에서 일부분이 빠져서 버림 이거 찾는데 1시간 반걸림 ㅋㅋ ~~~~~"
+    "*# 아시아나항공이랑 한섬은 stock 데이터에서 일부분이 빠져서 버림 이거 찾는데 1시간 반걸림 아 ~~~"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "namebasedfs = namebaseDFs(PEIS_table)\n",
     "PEISSTOCK_com_base = concatPEIS_STOCK(namebasedfs, PROFIT_namesymbol, Onetable)\n",
     "Matchcompanybase = pd.concat(PEISSTOCK_com_base)\n",
-    "Matchcompanybase['Targetprice'].fillna(-1,inplace = True) # 카테고리화 이전에 하긴 해야하네\n",
+    "Matchcompanybase['Targetprice'].fillna(0,inplace = True) # 카테고리화 이전에 하긴 해야하네\n",
     "Matchcompanybase.reset_index(drop=True,inplace = True)\n",
     "Matchcompanybase.to_excel('temp/kospi/Matchcompany.xlsx')"
    ]
@@ -202,6 +202,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    12385\n",
+       "3     1770\n",
+       "2     1098\n",
+       "4      951\n",
+       "1       22\n",
+       "Name: CompuConsen, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Matchcompanybase['CompuConsen'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,13 +261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. 파일불러들이기 붙여질 파일(PEIS) + 붙일 파일(price)\n",
-    "*# 아시아나항공이랑 한섬은 stock 데이터에서 일부분이 빠져서 버림 이거 찾는데 1시간 반걸림 ㅋㅋ ~~~~~"
+    "# 0. 파일불러들이기 붙여질 파일(PEIS) + 붙일 파일(price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -324,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "namebasedfs_kosdaq = namebaseDFs(PEIS_table_kosdaq)\n",
     "PEISSTOCK_com_base_kosdaq = concatPEIS_STOCK(namebasedfs_kosdaq, PROFIT_namesymbol_kosdaq, Onetable_kosdaq)\n",
     "Matchcompanybase_kosdaq = pd.concat(PEISSTOCK_com_base_kosdaq)\n",
-    "Matchcompanybase_kosdaq['Targetprice'].fillna(-1,inplace = True)\n",
+    "Matchcompanybase_kosdaq['Targetprice'].fillna(0,inplace = True)\n",
     "Matchcompanybase_kosdaq.reset_index(drop=True,inplace = True)\n",
     "Matchcompanybase_kosdaq.to_excel('temp/kosdaq/Matchcompany.xlsx')"
    ]
@@ -345,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,11 +406,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "Matchcompanybase_kosdaq.to_excel(\"Data/kosdaq/KosdaqPEISData&PriceData.xlsx\",index= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    25773\n",
+       "3      994\n",
+       "4      959\n",
+       "2      526\n",
+       "1       28\n",
+       "Name: CompuConsen, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Matchcompanybase_kosdaq['CompuConsen'].value_counts()"
    ]
   },
   {
