--- a/MakeTablesSolveProbs.ipynb
+++ b/MakeTablesSolveProbs.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Consen_cut을 쓰거나 ConpuConsen 쓰면 되는데 다 일일이 바꿀 순없으니 consencut = CompuConsen만들면 댐"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Port' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-0368784ac378>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CompuConsen'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'Port' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "0    4537\n",
+       "3    1305\n",
+       "2     755\n",
+       "4     714\n",
+       "1       9\n",
+       "Name: CompuConsen, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +218,7 @@
        "valPEIS    0.000  1.545 -1.000   0.000  1.000   -6.000    6.000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +662,7 @@
        "  PEIS       0.182  1.662 -1.000   0.000  2.000   -3.000    2.000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,12 +690,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "Alldata = pd.read_excel(\"Data/kospi/Alldata.xlsx\")\n",
     "UseOnlyPort = Alldata[['회계년','Name','시가총액','consen_cut','CompuConsen','valPEIS','deltaprice','deltaearn']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AllPEIS = Port(UseOnlyPort)\n",
+    "AllPEIS.ConsenPEIS()"
    ]
   },
   {
@@ -696,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,16 +728,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AllDatabyConsen = MakeTable6form(ConsenPorts)"
+    "AllDatabyConsen = MakeTable6form(AllPEIS.PEIS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -774,33 +795,33 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">All</th>\n",
        "      <th>5</th>\n",
-       "      <td>2237.0</td>\n",
-       "      <td>2274.0</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>119.0</td>\n",
-       "      <td>135.0</td>\n",
+       "      <td>531.0</td>\n",
+       "      <td>588.0</td>\n",
        "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>740.0</td>\n",
+       "      <td>768.0</td>\n",
+       "      <td>0.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1318.0</td>\n",
-       "      <td>1224.0</td>\n",
-       "      <td>0.52</td>\n",
+       "      <td>1022.0</td>\n",
+       "      <td>1037.0</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.45</td>\n",
+       "      <td>1386.0</td>\n",
+       "      <td>1248.0</td>\n",
+       "      <td>0.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">No consen</th>\n",
@@ -963,11 +984,11 @@
       ],
       "text/plain": [
        "             Earning increases  Earning decrease  Percentage of increse\n",
-       "All       5             2237.0            2274.0                   0.50\n",
-       "          4                0.0               2.0                   0.00\n",
-       "          3              119.0             135.0                   0.47\n",
-       "          2             1318.0            1224.0                   0.52\n",
-       "          1                5.0               6.0                   0.45\n",
+       "All       5              531.0             588.0                   0.47\n",
+       "          4              740.0             768.0                   0.49\n",
+       "          3                0.0               0.0                   0.00\n",
+       "          2             1022.0            1037.0                   0.50\n",
+       "          1             1386.0            1248.0                   0.53\n",
        "No consen 5              282.0             325.0                   0.46\n",
        "          4              425.0             461.0                   0.48\n",
        "          3                0.0               0.0                   0.00\n",
@@ -995,7 +1016,7 @@
        "          1                1.0               2.0                   0.33"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1212,7 @@
        "Percentage       0.62   0.0    0.03     0.35    0.0     1.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
