--- a/MakeTablesSolveProbs_kosdaq.ipynb
+++ b/MakeTablesSolveProbs_kosdaq.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,147 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Targetprice</th>\n",
-       "      <th>Endprice</th>\n",
-       "      <th>consen_cut</th>\n",
-       "      <th>CompuConsen</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>23000.0</td>\n",
-       "      <td>10400</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>6270</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>38250.0</td>\n",
-       "      <td>32050</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>35000.0</td>\n",
-       "      <td>22900</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>11000.0</td>\n",
-       "      <td>7770</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10525</th>\n",
-       "      <td>5000.0</td>\n",
-       "      <td>4375</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10579</th>\n",
-       "      <td>5750.0</td>\n",
-       "      <td>4785</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10599</th>\n",
-       "      <td>8500.0</td>\n",
-       "      <td>5370</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10669</th>\n",
-       "      <td>20700.0</td>\n",
-       "      <td>13900</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10685</th>\n",
-       "      <td>9500.0</td>\n",
-       "      <td>6070</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1103 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Targetprice  Endprice  consen_cut  CompuConsen\n",
-       "11         23000.0     10400           3            4\n",
-       "13          7500.0      6270           3            2\n",
-       "27         38250.0     32050           3            2\n",
-       "29         35000.0     22900           3            4\n",
-       "31         11000.0      7770           3            4\n",
-       "...            ...       ...         ...          ...\n",
-       "10525       5000.0      4375           3            2\n",
-       "10579       5750.0      4785           2            3\n",
-       "10599       8500.0      5370           3            4\n",
-       "10669      20700.0     13900           3            4\n",
-       "10685       9500.0      6070           3            4\n",
-       "\n",
-       "[1103 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['CompuConsen'] - df['consen_cut'] != 0 ][['Targetprice','Endprice', 'consen_cut', 'CompuConsen']]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +225,7 @@
        "valPEIS       6.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +706,7 @@
        "  PEIS          4.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,12 +741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "Alldata = pd.read_excel(\"Data/kosdaq/Alldata.xlsx\")\n",
-    "UseOnlyPort = Alldata[['회계년','Name','시가총액','consen_cut','CompuConsen','valPEIS','deltaprice','deltaearn']]"
+    "UseOnlyPort = Alldata[['회계년','Name','시가총액','consen_cut','CompuConsen','valPEIS','deltaprice','deltaearn']]\n",
+    "AllPEIS = Port(UseOnlyPort)\n",
+    "AllPEIS.ConsenPEIS()"
    ]
   },
   {
@@ -899,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,16 +771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AllDatabyConsen = MakeTable6form(ConsenPorts)"
+    "AllDatabyConsen = MakeTable6form(AllPEIS.PEIS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -977,33 +838,33 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">All</th>\n",
        "      <th>5</th>\n",
-       "      <td>4475.0</td>\n",
-       "      <td>4598.0</td>\n",
+       "      <td>831.0</td>\n",
+       "      <td>863.0</td>\n",
        "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.40</td>\n",
+       "      <td>1147.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>48.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>0.42</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>906.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>0.51</td>\n",
+       "      <td>1519.0</td>\n",
+       "      <td>1523.0</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.35</td>\n",
+       "      <td>1940.0</td>\n",
+       "      <td>1944.0</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">No consen</th>\n",
@@ -1166,11 +1027,11 @@
       ],
       "text/plain": [
        "             Earning increases  Earning decrease  Percentage of increse\n",
-       "All       5             4475.0            4598.0                   0.49\n",
-       "          4                2.0               3.0                   0.40\n",
-       "          3               48.0              67.0                   0.42\n",
-       "          2              906.0             854.0                   0.51\n",
-       "          1                6.0              11.0                   0.35\n",
+       "All       5              831.0             863.0                   0.49\n",
+       "          4             1147.0            1203.0                   0.49\n",
+       "          3                0.0               0.0                   0.00\n",
+       "          2             1519.0            1523.0                   0.50\n",
+       "          1             1940.0            1944.0                   0.50\n",
        "No consen 5              661.0             677.0                   0.49\n",
        "          4              951.0            1005.0                   0.49\n",
        "          3                0.0               0.0                   0.00\n",
@@ -1198,7 +1059,7 @@
        "          1                3.0               6.0                   0.33"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1258,7 @@
        "Percentage       0.83   0.0    0.01     0.16    0.0      1.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
