--- a/Portfolio.ipynb
+++ b/Portfolio.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "  AR (%)     0.06   -0.341    0.000   -0.067     0.294     0.170      0.511"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +335,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "statistic : -3 , pvalue : 0.0023128\n",
+      "statistic : -2 , pvalue : 0.0033083\n",
       "\n",
       "\n",
       "statistic : -1 , pvalue : 0.1804474\n",
       "\n",
       "\n",
-      "statistic : 0 , pvalue : 0.4082642\n",
+      "statistic : 0 , pvalue : 0.4109581\n",
       "\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -401,17 +401,17 @@
        "      <th rowspan=\"3\" valign=\"top\">No consen</th>\n",
        "      <th>N</th>\n",
        "      <td>4511.00</td>\n",
-       "      <td>608.000</td>\n",
+       "      <td>607.000</td>\n",
        "      <td>886.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>1218.000</td>\n",
-       "      <td>1799.000</td>\n",
+       "      <td>1800.000</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CR (%)</th>\n",
        "      <td>0.14</td>\n",
-       "      <td>0.134</td>\n",
+       "      <td>0.135</td>\n",
        "      <td>0.130</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.176</td>\n",
@@ -421,12 +421,12 @@
        "    <tr>\n",
        "      <th>AR (%)</th>\n",
        "      <td>0.11</td>\n",
-       "      <td>0.102</td>\n",
-       "      <td>-0.009</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>-0.010</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.092</td>\n",
+       "      <td>0.093</td>\n",
        "      <td>0.185</td>\n",
-       "      <td>0.083***</td>\n",
+       "      <td>0.08***</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Sell</th>\n",
@@ -493,32 +493,32 @@
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Buy</th>\n",
        "      <th>N</th>\n",
-       "      <td>2544.00</td>\n",
-       "      <td>470.000</td>\n",
+       "      <td>2542.00</td>\n",
+       "      <td>469.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>555.000</td>\n",
-       "      <td>765.000</td>\n",
-       "      <td>754.000</td>\n",
+       "      <td>557.000</td>\n",
+       "      <td>764.000</td>\n",
+       "      <td>752.000</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CR (%)</th>\n",
        "      <td>0.06</td>\n",
-       "      <td>0.078</td>\n",
+       "      <td>0.080</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.063</td>\n",
-       "      <td>0.054</td>\n",
-       "      <td>0.052</td>\n",
+       "      <td>0.061</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.053</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AR (%)</th>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.032</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.034</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>-0.019</td>\n",
+       "      <td>-0.021</td>\n",
        "      <td>-0.039</td>\n",
-       "      <td>0.056</td>\n",
+       "      <td>0.058</td>\n",
        "      <td>0.024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -558,18 +558,18 @@
       ],
       "text/plain": [
        "                      ALL    PEIS1    PEIS2    PEIS3     PEIS4     PEIS5  \\\n",
-       "No consen N       4511.00  608.000  886.000    0.000  1218.000  1799.000   \n",
-       "          CR (%)     0.14    0.134    0.130    0.000     0.176     0.130   \n",
-       "          AR (%)     0.11    0.102   -0.009    0.000     0.092     0.185   \n",
+       "No consen N       4511.00  607.000  886.000    0.000  1218.000  1800.000   \n",
+       "          CR (%)     0.14    0.135    0.130    0.000     0.176     0.130   \n",
+       "          AR (%)     0.11    0.105   -0.010    0.000     0.093     0.185   \n",
        "Sell      N          2.00    1.000    0.000    0.000     0.000     1.000   \n",
        "          CR (%)    -0.33   -0.372    0.000    0.000     0.000    -0.288   \n",
        "          AR (%)     0.04    0.000    0.000    0.000     0.000     0.000   \n",
        "Hold      N        254.00   41.000    0.000   63.000    73.000    77.000   \n",
        "          CR (%)     0.03   -0.056    0.000   -0.068     0.208    -0.007   \n",
        "          AR (%)     0.11   -0.145    0.000    0.028     0.248    -0.035   \n",
-       "Buy       N       2544.00  470.000    0.000  555.000   765.000   754.000   \n",
-       "          CR (%)     0.06    0.078    0.000    0.063     0.054     0.052   \n",
-       "          AR (%)     0.01    0.032    0.000   -0.019    -0.039     0.056   \n",
+       "Buy       N       2542.00  469.000    0.000  557.000   764.000   752.000   \n",
+       "          CR (%)     0.06    0.080    0.000    0.061     0.055     0.053   \n",
+       "          AR (%)     0.02    0.034    0.000   -0.021    -0.039     0.058   \n",
        "S_Buy     N         11.00    2.000    1.000    3.000     2.000     3.000   \n",
        "          CR (%)    -0.19    0.055    0.057   -0.323    -0.184    -0.301   \n",
        "          AR (%)     0.06   -0.341    0.000   -0.067     0.294     0.170   \n",
@@ -577,7 +577,7 @@
        "                 PEIS 5 - 1  \n",
        "No consen N                  \n",
        "          CR (%)             \n",
-       "          AR (%)   0.083***  \n",
+       "          AR (%)    0.08***  \n",
        "Sell      N                  \n",
        "          CR (%)             \n",
        "          AR (%)          0  \n",
@@ -592,7 +592,7 @@
        "          AR (%)      0.511  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -637,11 +637,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = ConsenPorts[3].ARreturnlist,ConsenPorts[2].ARreturnlist\n",
+    "# 이거는 롱숏포폴 합친거 할때 쓰기\n",
+    "x, y = PEISPorts[4].ARreturnlist,PEISPorts[0].ARreturnlist\n",
+    "#x = ConsenPorts[3].ARreturnlist.tolist() + ConsenPorts[4].ARreturnlist.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LeveneResult -- stat : 9.951442, p-value : 0.001620 \n",
+      "\n",
+      "False\n",
+      "\n",
+      "statistic : 3 , pvalue : 0.0011958\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "_stat,_pvalue = stats.levene(x,y)\n",
     "print(\"LeveneResult -- stat : %3f, p-value : %3f \\n\" %(_stat, _pvalue))\n",
     "if _pvalue < 0.05:\n",
@@ -651,6 +674,55 @@
     "print(equal_Var)\n",
     "statistic , pvalue = stats.ttest_ind(x,y, equal_var= equal_Var)\n",
     "print(\"\\nstatistic : %d , pvalue : %.7f\\n\" % (statistic, pvalue))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "254"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ConsenPorts[2].counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ConsenPorts[3].counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07537765457031285"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PEISPorts[0].AR"
    ]
   },
   {
@@ -674,9 +746,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-f3fc593123e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Symbol'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "temp = df.set_index(['Symbol','Name'])"
    ]
@@ -689,6 +773,20 @@
    "source": [
     "pd.DataFrame().reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
